- Changed GUI text in the reports (both) from No of Calls to No. of Calls

--- a/spring-boot/admin/src/main/resources/templates/admin/fragments/reports/report.html
+++ b/spring-boot/admin/src/main/resources/templates/admin/fragments/reports/report.html
@@ -147,7 +147,7 @@
                     <thead>
                     <tr>
                         <th>Pricing Rule (Type of Call)</th>
-                        <th>No of Calls</th>
+                        <th>No. of calls</th>
                         <th>Price</th>
                         <th>To Pay</th>
                     </tr>
