--- a/spring-boot/admin/src/main/resources/templates/admin/fragments/reports/report.html
+++ b/spring-boot/admin/src/main/resources/templates/admin/fragments/reports/report.html
@@ -147,7 +147,7 @@
                     <thead>
                     <tr>
                         <th>Pricing Rule (Type of Call)</th>
-                        <th>No. of calls</th>
+                        <th>Number of calls</th>
                         <th>Price</th>
                         <th>To Pay</th>
                     </tr>
@@ -339,4 +339,3 @@
 </script>
 </body>
 </html>
-
